<resources>
    <string name="app_name">Athena</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="textAuthorization">Авторизация</string>
    <string name="textRePass">Восстановить пароль</string>
    <string name="textLogIn">Войти</string>
    <string name="textLogUp">Регистрация</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textRegistration">Регистрация</string>
    <string name="textInRegistration">Зарегистрироваться</string>
    <string name="h2Repass">Восстановление пароля</string>
    <string name="textRepass">Восстановить пароль</string>
    <string name="textInputEmail">Введите почту</string>
    <string name="textName">Имя</string>
    <string name="posts">Объявления</string>
    <string name="profile">Профиль</string>
    <string name="entries">Мои занятия</string>
    <string name="loading_error">Ошибка загрузки. Проверьте интернет подключение.</string>
    <string name="successfully">Успешно</string>
    <string name="signup">Записаться</string>
    <string name="moredetails">Подробнее</string>
    <string name="SelectSubject">Выбрать тематики</string>
    <string-array name="subjects">
        <item>Математический анализ</item>
        <item>Функциональный анализ</item>
        <item>Программирование</item>
        <item>История</item>
        <item>Инжененрия</item>
        <item>Дизайн</item>
        <item>Графика</item>
        <item>Черчение</item>
        <item>Моделирование</item>
    </string-array>
    <string-array name="dayWeek">
        <item>понедельник</item>
        <item>вторник</item>
        <item>среда</item>
        <item>четверг</item>
        <item>пятница</item>
        <item>суббота</item>
        <item>воскресенье</item>
    </string-array>

    <string-array name="hours">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="arrayRoles">
        <item>Ученик</item>
        <item>Репетитор</item>
    </string-array>

    <string name="type">Тип</string>
    <string name="freetime">Свободное время</string>
    <string name="duration">Длительность</string>
    <string name="form">Форма обучения</string>
    <string name="price">Цена</string>
    <string name="subject">Тематика</string>
    <string name="description">Описание</string>
    <string name="chosetime">Выберите время</string>
    <string name="textEmail">Почта</string>
    <string name="putcontacts">Контакты для связи:</string>
    <string name="page">Страница</string>
    <string name="textAdd">Добавить</string>
    <string name="sentrequest">Запрос отправлен</string>
</resources>