<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:title="@string/posts"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_organization"
        android:title="@string/posts"
        android:icon="@drawable/abc_vector_test"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_entries"
        android:title="@string/entries"
        android:icon="@drawable/ic_entries"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="always"/>

</menu>